# asciicker

./: .gitignore  CMakeLists.txt  GL2WebGL2.txt  LICENSE  PerlinNoise.hpp  README.md  asciicker.js  asciicker.json  asciicker.sln  asciiid.code-workspace  asciiid.cpp  asciiid.sln  asciiid.vcxproj  asciiid.vcxproj.filters  asciiid_mswin.cpp  asciiid_platform.h  asciiid_render.cpp  asciiid_render.h  asciiid_term.cpp  asciiid_term.h  asciiid_urdo.cpp  asciiid_urdo.h  asciiid_vt.cpp  asciiid_web.cpp  asciiid_web.html  asciiid_x11.cpp  asciiid_xterm.cpp  audio-post.js  audio-pre.js  audio.cpp  audio.h  build-web.sh  build.sh  clean.sh  controls.txt  emscripten.txt  enemygen.cpp  enemygen.h  fast_rand.h  font1.cpp  (+79 more)
.run/: placeholder.txt
CMake/: make_asciicker.cmake  make_asciicker_mac.cmake  make_asciicker_server.cmake  make_asciicker_term.cmake  make_asciicker_term_mac.cmake  make_asciiid.cmake  make_asciiid_mac.cmake  make_game.cmake  make_game_term.cmake  make_server.cmake  make_server_0x.cmake
GPM/: gpm.h  gpmInt.h  liblow.c  message.h  report-lib.c  tools.c
MakeFiles/: makefile_asciiid  makefile_game  makefile_game_term  makefile_server  makefile_server_0x
Makefiles/: makefile_asciicker  makefile_asciicker_mac  makefile_asciicker_server  makefile_asciicker_server_0x  makefile_asciicker_term  makefile_asciicker_term_mac  makefile_asciiid  makefile_asciiid_mac  makefile_server  makefile_server_0x
SDL/: placeholder.txt
Scripts/: build-web.sh  build.sh  clean.sh  run_console.sh  run_xterm.sh
VisualStudio/: asciicker.vcxproj  asciiid.vcxproj  asciiid.vcxproj.filters  game.vcxproj  game.vcxproj.filters  server.vcxproj  server.vcxproj.filters
a3d/: aaaa.a3d  bbbb.a3d  cccc.a3d  expand2.a3d  fence_test.a3d  fence_test2.a3d  fence_test3.a3d  fence_test4.a3d  fence_test5.a3d  game.a3d  game_hearts.a3d  game_items.a3d  game_map.a3d  game_map_y7.a3d  game_map_y8.a3d  game_sprites.a3d  perf_test.a3d  world.a3d  zupa-tree-water.a3d  zupa-tree.a3d  zupa.a3d
aaa/bbbb/: myfile.txt
fonts/: cp437_10x10.png.bdf  cp437_10x10.png.psf  cp437_12x12.png.bdf  cp437_12x12.png.psf  cp437_14x14.png.bdf  cp437_14x14.png.psf  cp437_16x16.png.bdf  cp437_16x16.png.psf  cp437_18x18.png.bdf  cp437_18x18.png.psf  cp437_20x20.png.bdf  cp437_20x20.png.psf  cp437_24x24.png.bdf  cp437_24x24.png.psf  cp437_28x28.png.bdf  cp437_28x28.png.psf  cp437_32x32.png.bdf  cp437_32x32.png.psf  cp437_36x36.png.bdf  cp437_36x36.png.psf  cp437_40x40.png.bdf  cp437_40x40.png.psf  cp437_4x4.png.bdf  cp437_4x4.png.psf  cp437_6x6.png.bdf  cp437_6x6.png.psf  cp437_8x8.png.bdf  cp437_8x8.png.psf  fonts.dir
imgui/: imgui_demo.cpp  imgui_draw.cpp  imgui_widgets.cpp
io_mesh_akm/: __init__.py  export_akm.py  softlink.cmd  softlink.sh
meshes/: brick-1.akm  brick-1.blend  bridge-1.akm  bridge-1.blend  bridge-1.ply  bridge-2.akm  bridge-2.blend  bush-1.akm  bush-1.blend  bush-1.ply  export_ply.py  fence.akm  fence.blend  fence.ply  house-1.blend  house-1.ply  house-3.akm  house-3.blend  house-3.ply  laundry-1.akm  laundry-1.blend  monkey.blend  monkey.blend1  monkey.ply  mycastle.blend  mycastle.mtl  old-tree-1.akm  old-tree-1.blend  old-tree-2.akm  old-tree-2.blend  rock-1.akm  rock-1.blend  rock-1.ply  ship-1.akm  ship-1.blend  ship-1.ply  skull.akm  skull.blend  skull.ply  skull2.ply  (+15 more)
palettes/: my.act
png2xp/: build.sh  png2xp.cpp  png2xp.vcxproj  png2xp.vcxproj.filters
samples/: enc.sh  footsteps.txt
snap/: launcher  snapcraft.yaml
snap/gui/: asciicker.desktop
sprites/: asciicker.xp  attack-0001.xp  attack-0002.xp  attack-0011.xp  attack-0101.xp  attack-0111.xp  attack-1001.xp  attack-1011.xp  attack-1101.xp  attack-1111.xp  attack-rot-0001.xp  bigbee-0000.xp  bigbee-0001.xp  bigbee-0002.xp  bigbee-0010.xp  bigbee-0011.xp  bigbee-0012.xp  bigbee-0100.xp  bigbee-0101.xp  bigbee-0102.xp  bigbee-0110.xp  bigbee-0111.xp  bigbee-0112.xp  bigbee-1000.xp  bigbee-1001.xp  bigbee-1002.xp  bigbee-1010.xp  bigbee-1011.xp  bigbee-1012.xp  bigbee-1100.xp  bigbee-1101.xp  bigbee-1102.xp  bigbee-1110.xp  bigbee-1111.xp  bigbee-1112.xp  bigbee.xp  character.xp  desert_plants.xp  enemygen.xp  faces.xp  (+192 more)
src/: asciiid.cpp  enemygen.cpp  enemygen.h  fast_rand.h  font1.h  game.cpp  game.h  game_app.cpp  game_svr.cpp  game_web.cpp  gamepad.h  imgui_impl_opengl3.cpp  input.cpp  inventory.cpp  inventory.h  network.cpp  network.h  physics.cpp  physics.h  platform.h  render.cpp  render.h  rgba8.cpp  screen.cpp  sdl.cpp  sprite.cpp  term.cpp  term.h  texheap.cpp  texheap.h  upng.c  upng.h  urdo.cpp  urdo.h  world.cpp  world.h  x11.cpp
src/imgui/: imgui.h
v8/: placeholder.txt  x64.debug-args.gn  x64.release-args.gn  x86.debug-args.gn  x86.release-args.gn
wasm-test/: test.cpp  wasm-js-html.sh
www/: index.html  main.js  style.css
