# Set build arguments here. See `gn help buildargs`.
treat_warnings_as_errors = false
use_custom_libcxx = false
use_custom_libcxx_for_host = false
use_glib = false
use_sysroot = false
v8_enable_i18n_support = false
v8_use_external_startup_data = false 
v8_monolithic = true 
v8_static_library = true
v8_enable_webassembly = false
is_component_build = false
is_debug = false 
host_cpu = "x86"
target_cpu = "x86" 
v8_target_cpu = "x86"